--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon  Server.js",
+    "server": "node  Server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
